--- a/P9 Popcorn Swirl/View/Base.lproj/Main.storyboard
+++ b/P9 Popcorn Swirl/View/Base.lproj/Main.storyboard
@@ -334,7 +334,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KNe-zE-qBH" customClass="GADBannerView">
                                 <rect key="frame" x="47" y="708" width="320" height="100"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GoogleAds" translatesAutoresizingMaskIntoConstraints="NO" id="JFm-T0-mpq">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JFm-T0-mpq">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
@@ -397,7 +397,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="GoogleAds" width="662" height="226"/>
         <image name="bookmark" catalog="system" width="56" height="64"/>
         <image name="bookmark.fill" catalog="system" width="56" height="64"/>
         <image name="eye" catalog="system" width="64" height="40"/>
